CRM-20600 - composer.json - Add phpQuery

--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,7 @@
   "include-path": ["vendor/tecnickcom"],
   "require": {
     "dompdf/dompdf" : "0.7.*",
+    "electrolinux/phpquery": "^0.9.6",
     "symfony/config": "~2.5.0",
     "symfony/dependency-injection": "~2.5.0",
     "symfony/event-dispatcher": "~2.5.0",
