CRM-16421 CRM-17633 WIP Changes to support WP in it's own directory.   Allow for civicrn.settings.extra.php for WP.  Create template for civicrm.settings.extra.php.  Update install/civicrm.php for all needed params for different common install scenarios.  Fix linting issues in civicrm.php

--- a/templates/CRM/common/civicrm.settings.php.template
+++ b/templates/CRM/common/civicrm.settings.php.template
@@ -73,6 +73,10 @@ if (!defined('CIVICRM_UF_DSN') && CIVICRM_UF !== 'UnitTests') {
   define( 'CIVICRM_UF_DSN'           , 'mysql://%%CMSdbUser%%:%%CMSdbPass%%@%%CMSdbHost%%/%%CMSdbName%%?new_link=true');
 }
 
+if (file_exists(__DIR__ . '/civicrm.settings.extra.php')) {
+  require_once __DIR__ . '/civicrm.settings.extra.php';
+}
+
 /**
  * CiviCRM Database Settings
  *
