--- a/contributor-key.yml
+++ b/contributor-key.yml
@@ -440,6 +440,8 @@
 
 - name        : Noah Miller
   jira        : noah
+  organization: Lemniscus
+  github      : highfalutin
 
 - github      : nowszy
   name        : Pawel Nowak
