Add Karen Stevenson to contributor-key.yml

--- a/contributor-key.yml
+++ b/contributor-key.yml
@@ -315,6 +315,10 @@
   name        : Kajakaran Balakrishnan
   organization: Veda Consulting
   jira        : kajan
+  
+- github      : kngs
+  name        : Karen Stevenson
+  organization: Greenleaf Advancement
 
 - github      : KarinG
   name        : Karin Gerritsen
