--- a/composer.json
+++ b/composer.json
@@ -23,7 +23,9 @@
     "phpoffice/phpword": "^0.13.0",
     "pear/Validate_Finance_CreditCard": "dev-master",
     "civicrm/civicrm-cxn-rpc": "~0.16.12.05",
-    "pear/Auth_SASL": "1.1.0"
+    "pear/Auth_SASL": "1.1.0",
+    "pear/Net_SMTP": "1.6.*",
+    "pear/Net_socket": "1.0.*"
   },
   "repositories": [
     {
@@ -35,12 +37,14 @@
     "post-install-cmd": [
       "bash tools/scripts/composer/dompdf-cleanup.sh",
       "bash tools/scripts/composer/tcpdf-cleanup.sh",
-      "bash tools/scripts/composer/pear-execption-fix.sh"
+      "bash tools/scripts/composer/pear-exception-fix.sh",
+      "bash tools/scripts/composer/net-smtp-fix.sh"
     ],
     "post-update-cmd": [
       "bash tools/scripts/composer/dompdf-cleanup.sh",
       "bash tools/scripts/composer/tcpdf-cleanup.sh",
-      "bash tools/scripts/composer/pear-execption-fix.sh"
+      "bash tools/scripts/composer/pear-exception-fix.sh",
+      "bash tools/scripts/composer/net-smtp-fix.sh"
     ]
   }
 }
