--- a/composer.json
+++ b/composer.json
@@ -22,7 +22,8 @@
     "zetacomponents/mail": "dev-1.7-civi",
     "phpoffice/phpword": "^0.13.0",
     "pear/Validate_Finance_CreditCard": "dev-master",
-    "civicrm/civicrm-cxn-rpc": "~0.16.12.05"
+    "civicrm/civicrm-cxn-rpc": "~0.16.12.05",
+    "pear/Auth_SASL": "1.1.0"
   },
   "repositories": [
     {
