--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,8 @@
     "pear/Net_SMTP": "1.6.*",
     "pear/Net_socket": "1.0.*",
     "totten/ca-config": "~17.05",
-    "civicrm/civicrm-cxn-rpc": "~0.16.12.05"
+    "civicrm/civicrm-cxn-rpc": "~0.16.12.05",
+    "pear/Auth_SASL": "1.1.0"
   },
   "scripts": {
     "post-install-cmd": [
