--- a/bower.json
+++ b/bower.json
@@ -5,11 +5,11 @@
   "license": "AGPL-3.0",
   "private": true,
   "dependencies": {
-    "angular": "~1.3.8",
+    "angular": "~1.5.0",
     "angular-file-upload": ">=1.1.5 <=1.1.6",
     "angular-jquery-dialog-service": "totten/angular-jquery-dialog-service#civicrm",
-    "angular-mocks": "~1.3.8",
-    "angular-route": "~1.3.8",
+    "angular-mocks": "~1.5.0",
+    "angular-route": "~1.5.0",
     "angular-ui-sortable": "0.12.x",
     "angular-ui-utils": "0.1.x",
     "angular-unsavedChanges": "~0.1.1",
@@ -25,9 +25,10 @@
     "jstree": "~3",
     "ckeditor": "~4.5",
     "font-awesome": "~4",
-    "angular-sanitize": "~1.3.15"
+    "angular-sanitize": "~1.5.0",
+    "phantomjs-polyfill": "^0.0.2"
   },
   "resolutions": {
-    "angular": "~1.3.8"
+    "angular": "~1.5.11"
   }
 }
