CRM-16421 - Convert constants to `$civicrm_paths`
Following up on the discussion from
[#10513](https://github.com/civicrm/civicrm-core/pull/10513), this converts
the proposed constants `CIVICRM_UF_WP_BASEURL` and `CIVICRM_UF_ADMINURL` to
variables in the `Paths` system.

A few benefits:
 * Reduces code duplication between `civicrm.php` and `WordPress.php`.
 * Can construct sub-paths with prettier notation (`Civi::paths()->getUrl('[wp.frontend]/foo.txt')`)
 * Has options to output relative or absolute URLs
 * Can expand on `Paths` to provide more inspection/validation

Notes:

 * `CIVICRM_UF_WP_BASEURL` => `wp.frontend.base`
 * `CIVICRM_UF_ADMINURL` => `wp.backend.base`

----------------------------------------
* CRM-16421: Work to get CiviCRM for WordPress in WordPress' official Repository
  https://issues.civicrm.org/jira/browse/CRM-16421

--- a/templates/CRM/common/civicrm.settings.extra.php.template
+++ b/templates/CRM/common/civicrm.settings.extra.php.template
@@ -34,12 +34,9 @@
  * Extra Site URLs:
  *
  */
-if (!defined('CIVICRM_UF_WP_BASEURL')) {
-  define( 'CIVICRM_UF_WP_BASEURL'      , '%%wpbaseURL%%');
-}
-if (!defined('CIVICRM_UF_ADMINURL')) {
-  define( 'CIVICRM_UF_ADMINURL' , '%%wpadminURL%%' );
-}
+global $civicrm_paths;
+$civicrm_paths['wp.frontend.base']['url'] = '%%wpbaseURL%%';
+$civicrm_paths['wp.backend.base']['url'] = '%%wpadminURL%%';
 
 /**
  * Define any CiviCRM Settings Overrides per http://wiki.civicrm.org/confluence/display/CRMDOC/Override+CiviCRM+Settings
