--- a/contributor-key.yml
+++ b/contributor-key.yml
@@ -529,7 +529,7 @@
 
 - github      : mlutfy
   name        : Mathieu Lutfy
-  organization: CiviCRM
+  organization: Coop SymbioTIC
   jira        : mlutfy
 
 - name        : Michal Mach
