--- a/composer.json
+++ b/composer.json
@@ -26,7 +26,8 @@
     "civicrm/civicrm-cxn-rpc": "~0.16.12.05",
     "pear/Auth_SASL": "1.1.0",
     "pear/Net_SMTP": "1.6.*",
-    "pear/Net_socket": "1.0.*"
+    "pear/Net_socket": "1.0.*",
+    "guzzlehttp/guzzle": "~5.0"
   },
   "repositories": [
     {
