Klaas Eikelboom (Kainuk Empowerment) is member of CiviCooP

--- a/contributor-key.yml
+++ b/contributor-key.yml
@@ -389,6 +389,7 @@
 
 - github      : kainuk
   name        : Klaas Eikelboom
+  organization: CiviCooP
   jira        : keikelboom
 
 - github      : Kajakaran
