--- a/contributor-key.yml
+++ b/contributor-key.yml
@@ -738,6 +738,7 @@
 
 - github      : seanmadsen
   name        : Sean Madsen
+  organization: Left Join Labs
   jira        : seanmadsen
 
 - github      : sharique
