--- a/templates/CRM/common/civicrm.settings.php.template
+++ b/templates/CRM/common/civicrm.settings.php.template
@@ -316,7 +316,7 @@ if (!defined('CIVICRM_DOMAIN_ID')) {
  * NB: defining a value for environment here prevents it from being set
  * via the browser. 
  */ 
-// $civicrm_setting[CRM_Core_BAO_Setting::DEVELOPER_PREFERENCES_NAME]['environment'] = 'Production'; 
+// $civicrm_setting['domain']['environment'] = 'Production'; 
 
 /**
  * Settings to enable external caching using a cache server.  This is an
