CRM-18231 - civicrm.settings.php.template - Move `global` declaration
When using the example snippets in the settings file, it's easy to
accidentally leave `global $civicrm_setting` commented out -- which is
fairly confusing/mysterious way to have your settings ignored.

There's no cost to declaring `global $civicrm_setting` by default in new
config files.

--- a/templates/CRM/common/civicrm.settings.php.template
+++ b/templates/CRM/common/civicrm.settings.php.template
@@ -28,6 +28,7 @@
 /**
  * CiviCRM Configuration File.
  */
+global $civicrm_setting;
 
 /**
  * Content Management System (CMS) Host:
@@ -221,8 +222,6 @@ if (!defined('CIVICRM_UF_BASEURL')) {
  *
  * Uncomment and edit the below as appropriate.
  */
- // Add this line only once above any settings overrides.
- //  global $civicrm_setting;
 
  // Override the Temporary Files directory.
  // $civicrm_setting['Directory Preferences']['uploadDir'] = '/path/to/upload-dir' ;
